--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "RemoraAI",
+  "name": "RemoraAI - Smart & Adaptive AI Assistant",
   "icons": [
     {
       "src": "favicon.ico",
@@ -20,6 +20,7 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#0A84FF",
+  "background_color": "#ffffff",
+  "description": "RemoraAI is a smart and adaptive AI assistant designed to enhance productivity with human-like responses and powerful automation."
 }
